@@ -21,16 +21,13 @@ import org.elasticsearch.xpack.esql.core.plan.logical.UnaryPlan;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
-import org.elasticsearch.xpack.esql.core.type.DataTypes;
 import org.elasticsearch.xpack.esql.expression.NamedExpressions;
 import org.elasticsearch.xpack.esql.parser.ParsingException;
 import org.elasticsearch.xpack.esql.plan.GeneratingPlan;
-import org.elasticsearch.xpack.esql.type.EsqlDataTypes;
 
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.esql.core.expression.Expressions.asAttributes;
 
@@ -47,20 +44,20 @@ public class Grok extends RegexExtract {
                     x -> new Alias(
                         Source.EMPTY,
                         x.name(),
-                        new ReferenceAttribute(Source.EMPTY, x.name(), EsqlDataTypes.widenSmallNumericTypes(toDataType(x.type())))
+                        new ReferenceAttribute(Source.EMPTY, x.name(), toDataType(x.type()).widenSmallNumeric())
                     )
                 )
-                .collect(Collectors.toList());
+                .toList();
         }
 
         private static DataType toDataType(GrokCaptureType type) {
             return switch (type) {
-                case STRING -> DataTypes.KEYWORD;
-                case INTEGER -> DataTypes.INTEGER;
-                case LONG -> DataTypes.LONG;
-                case FLOAT -> DataTypes.FLOAT;
-                case DOUBLE -> DataTypes.DOUBLE;
-                case BOOLEAN -> DataTypes.BOOLEAN;
+                case STRING -> DataType.KEYWORD;
+                case INTEGER -> DataType.INTEGER;
+                case LONG -> DataType.LONG;
+                case FLOAT -> DataType.FLOAT;
+                case DOUBLE -> DataType.DOUBLE;
+                case BOOLEAN -> DataType.BOOLEAN;
             };
         }
 
